reduce header z-index to prevent it appearing above modals

--- a/packages/asl-components/src/document-header/index.scss
+++ b/packages/asl-components/src/document-header/index.scss
@@ -1,7 +1,7 @@
 .sticky-wrapper {
   position: relative; // needed to allow z-index to work
   height: 4 * $govuk-gutter; // height required otherwise get flicker on slow-scroll
-  z-index: 1000;
+  z-index: 100;
 
   &.sticky {
     position: -webkit-sticky;
